2006-09-05  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_muc/mod_muc.erl: It is now possible to configure the MUC room
	history feature. A new option has been added in ejabberd muc module
	configuration (history_size) to define the size of the history. 0 is
        used to disable the feature.
	* src/mod_muc/mod_muc_room.erl: Likewise.
	* doc/guide.tex: Likewise.

2006-09-05  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_shared_roster.erl: Bugfix

	* src/mod_roster_odbc.erl: Bugfix

2006-09-03  Mickael Remond  <mickael.remond@process-one.net>

	* src/odbc/odbc_queries.erl: Support for Microsoft SQL Server as a
	database backend (via ODBC).
	* src/odbc/ejabberd_odbc.erl: Likewise.
	* src/odbc/mssql.sql: Likewise.
	* src/odbc/Makefile.in: Likewise.
	* src/ejabberd_auth_odbc.erl: Likewise.
	* src/mod_offline_odbc.erl: Likewise.
	* src/mod_roster_odbc.erl: Likewise.
	* src/mod_last_odbc.erl: Likewise.
	* src/configure.ac: Likewise
	* doc/guide.tex: Likewise.
	* doc/introduction.tex: Likewise.
	* src/odbc/pg.sql: Minor fix. 

2006-08-28  Mickael Remond  <mickael.remond@process-one.net>

	* Makefile.in: Fix for MacOSX compilation.
	* ejabberd_zlib/Makefile.in: Likewise.
	* mod_irc/Makefile.in: Likewise.
	* stringprep/Makefile.in: Likewise.
	* tls/Makefile.in: Likewise. 

	* src/ejabberd.app: Updated to the current version.

2006-08-27  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc_room.erl: Fixed logging configuring
	permission check

2006-08-14  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_router.erl: Now filter_packet hook works in
	'global' context

2006-08-04  Alexey Shchepin  <alexey@sevcom.net>

	* src/tls/tls_drv.c: Report OpenSSL error messages (thanks to
	Magnus Henoch)

	* src/mod_muc/mod_muc_room.erl: Use standardized MUC room
	configuration fields (thanks to Magnus Henoch and Andy Turner)

2006-08-02  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_roster_odbc.erl: Bugfix
